--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@faker-js/faker": "^7.4.0",
+    "@netlify/functions": "^1.2.0",
+    "@types/node": "^14.18.28",
+    "axios": "^0.27.2",
+    "netlify-cli": "^11.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +40,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.7.1",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.4"
   }
 }
