--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,24 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "paths": {
-      "@cdgstudio/dashboard": ["projects/dashboard/src/public-api.ts"],
-      "@cdgstudio/dashboard/*": ["projects/dashboard/*"],
-      "environments": ["src/environments/environment.ts"]
-    }
+      "@cdgstudio/dashboard": [
+        "projects/dashboard/src/public-api.ts"
+      ],
+      "@cdgstudio/dashboard/*": [
+        "projects/dashboard/*"
+      ],
+      "environments": [
+        "src/environments/environment.ts"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
